syntax = "proto3";

package Proto.Command.Tracing;

service TraceReportCommandService {
  rpc SendTraceReport (SendTraceReportCommand) returns (CommandResponse);
}

message SendTraceReportCommand {
  string traceReportDto = 1;
}

message CommandResponse {
  bool success = 1;
}
